2005-11-18  Kevin B. Kenny  <kennykb@acm.org>

	* doc/clock.n:  Restored several missing lines near the %w
	format group so that %w and %W are documented with their
	actual behaviour.  [Bug 1359183]
	
2005-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): preserve statePtr
	until we netrieve next statePtr from it.

2005-11-18  Miguel Sofer <msofer@users.sf.net>

	* generic/tclObj.c (GetBignumFromObj): replace NULL with
	tclEmptyStringRep to stop memcpy from complaining in a debug build
	(the corresponding branch is eliminated by the optimiser
	otherwise). 

2005-11-18  Andreas Kupries <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Applied Pat Thoyts'
	  patch for [SF Tcl Bug 1359094]. This moves the retrieval of the
	  next channel state to the end of the loop, as the called
	  closeproc may close other channels, i.e. modify the list we are
	  iterating, invalidating any pointer retrieved earlier.

2005-11-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclListObj.c:	Restored the SetListFromAny routine to
	* generic/tclObj.c:	the "list" Tcl_ObjType, and restored the
	Tcl_RegisterObjType() call for "list".  This addresses the needs
	of some "bridge" extensions to examine whether the Tcl_ObjType of
	a Tcl_Obj is that of the "list" Tcl_ObjType.

2005-11-18  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/http/http.tcl (http::geturl): Improved syntactic validation
	of URLs, and better error messages in some cases. [Bug 1358369]

2005-11-17  Miguel Sofer <msofer@users.sf.net>

	* tests/namespace.test: fix comment

2005-11-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStrToD.c:	More data in the "can't happen" Tcl_Panic to
	aid debugging.

	* generic/tclBasic.c (CallCommandTraces):	Save/restore the
	interp result during traces to fix [Bug 1355342].

2005-11-13  Miguel Sofer <msofer@users.sf.net>

	* generic/tclInt.h:
	* generic/tclNamesp.c: